[gd_scene load_steps=9 format=3 uid="uid://bjy536suxs3su"]

[ext_resource type="Script" uid="uid://7qwuhi6631b4" path="res://pause_menu.gd" id="1_05uyy"]
[ext_resource type="Texture2D" uid="uid://bjr3h0vds8d4v" path="res://assets/Screenshot 2025-08-03 at 4.00.21â€¯PM.png" id="2_p81d2"]
[ext_resource type="FontFile" uid="uid://d3vd82mkw7oam" path="res://assets/Break Mind.otf" id="3_2nc7s"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_d3xb4"]
texture = ExtResource("2_p81d2")
modulate_color = Color(0.2757, 0.2757, 0.2757, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mxa3g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e8sti"]
bg_color = Color(6.61798e-08, 0.127365, 0.215636, 1)
border_color = Color(0.200187, 0.171884, 0.00575288, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q2yj1"]
bg_color = Color(6.01634e-09, 0.0610067, 0.13376, 1)
border_color = Color(0.200187, 0.171884, 0.00575288, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a32ks"]
bg_color = Color(0, 0.145098, 0.270588, 1)
border_color = Color(0.200187, 0.171884, 0.00575288, 1)

[node name="pause_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_05uyy")

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.603922)
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_d3xb4")
metadata/_edit_use_anchors_ = true

[node name="ResumeButtons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -89.0
offset_top = -83.0
offset_right = 89.0
offset_bottom = 83.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
metadata/_edit_use_anchors_ = true

[node name="ButtonResume" type="Button" parent="ResumeButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/font_hover_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/icon_disabled_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/icon_hover_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/icon_pressed_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/icon_focus_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/icon_normal_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/font_outline_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/font_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/font_focus_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/font_pressed_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_fonts/font = ExtResource("3_2nc7s")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_mxa3g")
theme_override_styles/hover = SubResource("StyleBoxFlat_e8sti")
theme_override_styles/pressed = SubResource("StyleBoxFlat_q2yj1")
theme_override_styles/normal = SubResource("StyleBoxFlat_a32ks")
text = "Resume Game"

[node name="ButtonRestart" type="Button" parent="ResumeButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/font_hover_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/icon_disabled_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/icon_hover_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/icon_pressed_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/icon_focus_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/icon_normal_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/font_outline_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/font_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/font_focus_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/font_pressed_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_fonts/font = ExtResource("3_2nc7s")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_mxa3g")
theme_override_styles/hover = SubResource("StyleBoxFlat_e8sti")
theme_override_styles/pressed = SubResource("StyleBoxFlat_q2yj1")
theme_override_styles/normal = SubResource("StyleBoxFlat_a32ks")
text = "Restart
"

[node name="ButtonMainMenu" type="Button" parent="ResumeButtons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_disabled_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/font_hover_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/icon_disabled_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/icon_hover_pressed_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/icon_hover_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/icon_pressed_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/icon_focus_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/icon_normal_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/font_outline_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/font_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/font_focus_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_colors/font_pressed_color = Color(1, 0.756863, 0.0705882, 1)
theme_override_fonts/font = ExtResource("3_2nc7s")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_mxa3g")
theme_override_styles/hover = SubResource("StyleBoxFlat_e8sti")
theme_override_styles/pressed = SubResource("StyleBoxFlat_q2yj1")
theme_override_styles/normal = SubResource("StyleBoxFlat_a32ks")
text = "Save"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -148.0
offset_top = 159.0
offset_right = 148.0
offset_bottom = 236.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.977792, 0.751594, 0.488269, 1)
theme_override_fonts/font = ExtResource("3_2nc7s")
theme_override_font_sizes/font_size = 70
text = "Starlight"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="ResumeButtons/ButtonResume" to="." method="_on_button_resume_pressed"]
[connection signal="pressed" from="ResumeButtons/ButtonRestart" to="." method="_on_button_restart_pressed"]
[connection signal="pressed" from="ResumeButtons/ButtonMainMenu" to="." method="_on_button_main_menu_pressed"]
